# knapsack-ga

./: README.md  pyproject.toml
notebooks/: kanpsack_ga.ipynb  knapsack_ga.ipynb
